--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -4,7 +4,7 @@
       ".svelte-kit/generated/client-optimized/nodes/0.js",
       ".svelte-kit/generated/client-optimized/nodes/1.js"
     ],
-    "file": "_app/immutable/entry/app.UpD2vH34.js",
+    "file": "_app/immutable/entry/app.UozROIiz.js",
     "imports": [
       "_scheduler.k-kUyWhY.js",
       "_index.fwz0P8IJ.js"
@@ -23,11 +23,11 @@
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js"
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.wh-zVSnX.js",
+    "file": "_app/immutable/nodes/1.Fii1-Bfu.js",
     "imports": [
       "_scheduler.k-kUyWhY.js",
       "_index.fwz0P8IJ.js",
-      "_singletons.CBj4squ2.js"
+      "_singletons.vTLQpjzI.js"
     ],
     "isDynamicEntry": true,
     "isEntry": true,
@@ -42,17 +42,17 @@
   "_scheduler.k-kUyWhY.js": {
     "file": "_app/immutable/chunks/scheduler.k-kUyWhY.js"
   },
-  "_singletons.CBj4squ2.js": {
-    "file": "_app/immutable/chunks/singletons.CBj4squ2.js",
+  "_singletons.vTLQpjzI.js": {
+    "file": "_app/immutable/chunks/singletons.vTLQpjzI.js",
     "imports": [
       "_scheduler.k-kUyWhY.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/entry/start.XqLNFgFM.js",
+    "file": "_app/immutable/entry/start.ER54eZWD.js",
     "imports": [
       "_scheduler.k-kUyWhY.js",
-      "_singletons.CBj4squ2.js"
+      "_singletons.vTLQpjzI.js"
     ],
     "isEntry": true,
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js"
