Deploying new update + index.html added

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -7,7 +7,7 @@
       ".svelte-kit/generated/client-optimized/nodes/3.js",
       ".svelte-kit/generated/client-optimized/nodes/4.js"
     ],
-    "file": "_app/immutable/entry/app.aiL3R8hJ.js",
+    "file": "_app/immutable/entry/app.Q_2TMKK7.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js"
@@ -26,11 +26,11 @@
     "css": [
       "_app/immutable/assets/0.sbyfvb7O.css"
     ],
-    "file": "_app/immutable/nodes/0.kv75hcb-.js",
+    "file": "_app/immutable/nodes/0.-uq8_1yM.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
-      "_stores.x-PVNZpU.js",
+      "_stores.Xvv8iBhQ.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -82,12 +82,12 @@
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js"
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.eWgvyimy.js",
+    "file": "_app/immutable/nodes/4.DeCRq4kO.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
       "_test.tDWDHMTb.js",
-      "_stores.x-PVNZpU.js",
+      "_stores.Xvv8iBhQ.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -103,16 +103,16 @@
   "_scheduler.mvuM14Vw.js": {
     "file": "_app/immutable/chunks/scheduler.mvuM14Vw.js"
   },
-  "_singletons.DV9SrCd4.js": {
-    "file": "_app/immutable/chunks/singletons.DV9SrCd4.js",
+  "_singletons.KSYCCodD.js": {
+    "file": "_app/immutable/chunks/singletons.KSYCCodD.js",
     "imports": [
       "_scheduler.mvuM14Vw.js"
     ]
   },
-  "_stores.x-PVNZpU.js": {
-    "file": "_app/immutable/chunks/stores.x-PVNZpU.js",
+  "_stores.Xvv8iBhQ.js": {
+    "file": "_app/immutable/chunks/stores.Xvv8iBhQ.js",
     "imports": [
-      "_singletons.DV9SrCd4.js"
+      "_singletons.KSYCCodD.js"
     ]
   },
   "_test.tDWDHMTb.js": {
@@ -130,10 +130,10 @@
     "file": "_app/immutable/chunks/wLogo_white.8Z44ub5K.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/entry/start.Ja6eB2Y_.js",
+    "file": "_app/immutable/entry/start.QN17AR2c.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
-      "_singletons.DV9SrCd4.js"
+      "_singletons.KSYCCodD.js"
     ],
     "isEntry": true,
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js"
