--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -7,7 +7,7 @@
       ".svelte-kit/generated/client-optimized/nodes/3.js",
       ".svelte-kit/generated/client-optimized/nodes/4.js"
     ],
-    "file": "_app/immutable/entry/app.PcQNMqbI.js",
+    "file": "_app/immutable/entry/app.2p3t_IV3.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js"
@@ -26,11 +26,11 @@
     "css": [
       "_app/immutable/assets/0.sbyfvb7O.css"
     ],
-    "file": "_app/immutable/nodes/0.CT9JudID.js",
+    "file": "_app/immutable/nodes/0.BdK4VWWS.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
-      "_stores.JZr2_oHl.js",
+      "_stores.7VgMmuTX.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -82,12 +82,12 @@
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js"
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.D7PLDaAJ.js",
+    "file": "_app/immutable/nodes/4.t8OEQbVn.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
       "_test.tDWDHMTb.js",
-      "_stores.JZr2_oHl.js",
+      "_stores.7VgMmuTX.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -103,16 +103,16 @@
   "_scheduler.mvuM14Vw.js": {
     "file": "_app/immutable/chunks/scheduler.mvuM14Vw.js"
   },
-  "_singletons.9c96qrKe.js": {
-    "file": "_app/immutable/chunks/singletons.9c96qrKe.js",
+  "_singletons.GCA_lyIj.js": {
+    "file": "_app/immutable/chunks/singletons.GCA_lyIj.js",
     "imports": [
       "_scheduler.mvuM14Vw.js"
     ]
   },
-  "_stores.JZr2_oHl.js": {
-    "file": "_app/immutable/chunks/stores.JZr2_oHl.js",
+  "_stores.7VgMmuTX.js": {
+    "file": "_app/immutable/chunks/stores.7VgMmuTX.js",
     "imports": [
-      "_singletons.9c96qrKe.js"
+      "_singletons.GCA_lyIj.js"
     ]
   },
   "_test.tDWDHMTb.js": {
@@ -130,10 +130,10 @@
     "file": "_app/immutable/chunks/wLogo_white.8Z44ub5K.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/entry/start.sFipLxyJ.js",
+    "file": "_app/immutable/entry/start.zJOci9c8.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
-      "_singletons.9c96qrKe.js"
+      "_singletons.GCA_lyIj.js"
     ],
     "isEntry": true,
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js"
