--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-	"name": "chub-beta-testers-landing",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"deploy": "npm run build && git add . && git commit -m 'Deploy to GitHub Pages' && git push origin main",
-		"predeploy": "npm run build"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.4",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"autoprefixer": "^10.4.16",
-		"gh-pages": "^6.1.1",
-		"postcss": "^8.4.32",
-		"svelte": "^4.2.7",
-		"tailwindcss": "^3.4.0",
-		"vite": "^5.0.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.6.0",
-		"@fortawesome/free-brands-svg-icons": "^6.6.0",
-		"@fortawesome/svelte-fontawesome": "^0.2.2",
-		"@splidejs/svelte-splide": "^0.2.9",
-		"flickity": "^3.0.0",
-		"svelte-routing": "^2.11.0",
-		"sweetalert": "^2.1.2"
-	}
+   "name": "chub-beta-testers-landing",
+   "version": "0.0.1",
+   "private": true,
+   "scripts": {
+	"dev": "vite",
+	"build": "vite build",
+	"preview": "vite preview",
+	"deploy": "npm run build && git add build -f && git commit -m 'Deploy to GitHub Pages' && git push origin main",
+	"predeploy": "npm run build"
+   },
+   "devDependencies": {
+      "@sveltejs/adapter-auto": "^3.0.0",
+      "@sveltejs/adapter-static": "^3.0.4",
+      "@sveltejs/kit": "^2.0.0",
+      "@sveltejs/vite-plugin-svelte": "^3.0.0",
+      "autoprefixer": "^10.4.16",
+      "gh-pages": "^6.1.1",
+      "postcss": "^8.4.32",
+      "svelte": "^4.2.7",
+      "tailwindcss": "^3.4.0",
+      "vite": "^5.0.3"
+   },
+   "type": "module",
+   "dependencies": {
+      "@fortawesome/fontawesome-svg-core": "^6.6.0",
+      "@fortawesome/free-brands-svg-icons": "^6.6.0",
+      "@fortawesome/svelte-fontawesome": "^0.2.2",
+      "@splidejs/svelte-splide": "^0.2.9",
+      "flickity": "^3.0.0",
+      "svelte-routing": "^2.11.0",
+      "sweetalert": "^2.1.2"
+   }
 }
