--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -7,7 +7,7 @@
       ".svelte-kit/generated/client-optimized/nodes/3.js",
       ".svelte-kit/generated/client-optimized/nodes/4.js"
     ],
-    "file": "_app/immutable/entry/app.EXZcadqa.js",
+    "file": "_app/immutable/entry/app.jxc6LnGp.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js"
@@ -26,11 +26,11 @@
     "css": [
       "_app/immutable/assets/0.sbyfvb7O.css"
     ],
-    "file": "_app/immutable/nodes/0.w2jYPzPr.js",
+    "file": "_app/immutable/nodes/0.IbGZ64t5.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
-      "_stores.kkWXHJkd.js",
+      "_stores.QD6jtuub.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -82,12 +82,12 @@
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js"
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.dTrd3ell.js",
+    "file": "_app/immutable/nodes/4.jgq8Aphb.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
       "_test.tDWDHMTb.js",
-      "_stores.kkWXHJkd.js",
+      "_stores.QD6jtuub.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -103,16 +103,16 @@
   "_scheduler.mvuM14Vw.js": {
     "file": "_app/immutable/chunks/scheduler.mvuM14Vw.js"
   },
-  "_singletons.L8byPEzl.js": {
-    "file": "_app/immutable/chunks/singletons.L8byPEzl.js",
+  "_singletons.NkuRDwlH.js": {
+    "file": "_app/immutable/chunks/singletons.NkuRDwlH.js",
     "imports": [
       "_scheduler.mvuM14Vw.js"
     ]
   },
-  "_stores.kkWXHJkd.js": {
-    "file": "_app/immutable/chunks/stores.kkWXHJkd.js",
+  "_stores.QD6jtuub.js": {
+    "file": "_app/immutable/chunks/stores.QD6jtuub.js",
     "imports": [
-      "_singletons.L8byPEzl.js"
+      "_singletons.NkuRDwlH.js"
     ]
   },
   "_test.tDWDHMTb.js": {
@@ -130,10 +130,10 @@
     "file": "_app/immutable/chunks/wLogo_white.8Z44ub5K.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/entry/start.wfPBB3uV.js",
+    "file": "_app/immutable/entry/start.7ROvgLY7.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
-      "_singletons.L8byPEzl.js"
+      "_singletons.NkuRDwlH.js"
     ],
     "isEntry": true,
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js"
