--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -7,7 +7,7 @@
       ".svelte-kit/generated/client-optimized/nodes/3.js",
       ".svelte-kit/generated/client-optimized/nodes/4.js"
     ],
-    "file": "_app/immutable/entry/app.YJDx6uq1.js",
+    "file": "_app/immutable/entry/app.xO1l_95k.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js"
@@ -26,11 +26,11 @@
     "css": [
       "_app/immutable/assets/0.sbyfvb7O.css"
     ],
-    "file": "_app/immutable/nodes/0.bpOD6Kba.js",
+    "file": "_app/immutable/nodes/0.A5VYTg_7.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
-      "_stores.wx32YOQx.js",
+      "_stores.n9g_M0hS.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -82,12 +82,12 @@
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js"
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.uS4fuOA5.js",
+    "file": "_app/immutable/nodes/4.8_U8pFX5.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
       "_test.tDWDHMTb.js",
-      "_stores.wx32YOQx.js",
+      "_stores.n9g_M0hS.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -103,16 +103,16 @@
   "_scheduler.mvuM14Vw.js": {
     "file": "_app/immutable/chunks/scheduler.mvuM14Vw.js"
   },
-  "_singletons.76D1Q7AP.js": {
-    "file": "_app/immutable/chunks/singletons.76D1Q7AP.js",
+  "_singletons.mzYjf_kM.js": {
+    "file": "_app/immutable/chunks/singletons.mzYjf_kM.js",
     "imports": [
       "_scheduler.mvuM14Vw.js"
     ]
   },
-  "_stores.wx32YOQx.js": {
-    "file": "_app/immutable/chunks/stores.wx32YOQx.js",
+  "_stores.n9g_M0hS.js": {
+    "file": "_app/immutable/chunks/stores.n9g_M0hS.js",
     "imports": [
-      "_singletons.76D1Q7AP.js"
+      "_singletons.mzYjf_kM.js"
     ]
   },
   "_test.tDWDHMTb.js": {
@@ -130,10 +130,10 @@
     "file": "_app/immutable/chunks/wLogo_white.8Z44ub5K.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/entry/start.xBB8Uzpd.js",
+    "file": "_app/immutable/entry/start.deZapZSZ.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
-      "_singletons.76D1Q7AP.js"
+      "_singletons.mzYjf_kM.js"
     ],
     "isEntry": true,
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js"
