--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"dev": "vite",
 	"build": "vite build",
 	"preview": "vite preview",
-	"deploy": "npm run build && git add docs -f && git commit -m 'Deploy to GitHub Pages' && git push origin main",
+	"deploy": "npm run build && git add docs -f && git commit -m 'Deploy to view Pages' && git push origin main",
 	"predeploy": "npm run build"
    },
    "devDependencies": {
