--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -7,7 +7,7 @@
       ".svelte-kit/generated/client-optimized/nodes/3.js",
       ".svelte-kit/generated/client-optimized/nodes/4.js"
     ],
-    "file": "_app/immutable/entry/app.dMnkBl_K.js",
+    "file": "_app/immutable/entry/app.mS4VQBo4.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js"
@@ -26,11 +26,11 @@
     "css": [
       "_app/immutable/assets/0.sbyfvb7O.css"
     ],
-    "file": "_app/immutable/nodes/0.lFWOz7CZ.js",
+    "file": "_app/immutable/nodes/0.rY8dMQTJ.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
-      "_stores.TkYmHYYs.js",
+      "_stores._Cv3RHGX.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -82,12 +82,12 @@
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js"
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.53zffRQY.js",
+    "file": "_app/immutable/nodes/4.ErMKz20a.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
       "_index.coeg7t6C.js",
       "_test.tDWDHMTb.js",
-      "_stores.TkYmHYYs.js",
+      "_stores._Cv3RHGX.js",
       "_wLogo_white.8Z44ub5K.js"
     ],
     "isDynamicEntry": true,
@@ -103,16 +103,16 @@
   "_scheduler.mvuM14Vw.js": {
     "file": "_app/immutable/chunks/scheduler.mvuM14Vw.js"
   },
-  "_singletons.aDsgyWNV.js": {
-    "file": "_app/immutable/chunks/singletons.aDsgyWNV.js",
+  "_singletons.Op9aNbZ7.js": {
+    "file": "_app/immutable/chunks/singletons.Op9aNbZ7.js",
     "imports": [
       "_scheduler.mvuM14Vw.js"
     ]
   },
-  "_stores.TkYmHYYs.js": {
-    "file": "_app/immutable/chunks/stores.TkYmHYYs.js",
+  "_stores._Cv3RHGX.js": {
+    "file": "_app/immutable/chunks/stores._Cv3RHGX.js",
     "imports": [
-      "_singletons.aDsgyWNV.js"
+      "_singletons.Op9aNbZ7.js"
     ]
   },
   "_test.tDWDHMTb.js": {
@@ -130,10 +130,10 @@
     "file": "_app/immutable/chunks/wLogo_white.8Z44ub5K.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/entry/start.1KeFmHwn.js",
+    "file": "_app/immutable/entry/start.SyIHUE0g.js",
     "imports": [
       "_scheduler.mvuM14Vw.js",
-      "_singletons.aDsgyWNV.js"
+      "_singletons.Op9aNbZ7.js"
     ],
     "isEntry": true,
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js"
